--- a/src/components/Select/style.css
+++ b/src/components/Select/style.css
@@ -8,5 +8,4 @@
   -webkit-appearance: none;
   appearance: none;
   cursor: pointer;
-  padding: var(--e-space-1);
 }
