--- a/src/components/TextField/style.css
+++ b/src/components/TextField/style.css
@@ -2,7 +2,3 @@
   display: flex;
   flex-direction: column;
 }
-
-.e-text-field__input {
-  padding: var(--e-space-1);
-}
