--- a/src/global.css
+++ b/src/global.css
@@ -104,6 +104,7 @@ select {
   color: inherit;
   font-size: inherit;
   outline: 0;
+  padding: var(--e-space-1) var(--e-space-2);
   transition-duration: var(--e-time-0);
   transition-property: background, border;
   transition-timing-function: var(--e-transition);
